Refactoring of city class